--- a/Lixo/style.css
+++ b/Lixo/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: Arial, sans-serif;
+    color: white;
+
 }
 
 input[type="text"] {
@@ -24,3 +26,12 @@ button[type="button"] {
 button[type="button"]:hover {
     background-color: #46a049;
 }
+
+.bg{
+    position: absolute;
+    z-index: -1;
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%;
+  }
