--- a/dogPoop/style.css
+++ b/dogPoop/style.css
@@ -38,7 +38,7 @@ button[type="button"]:hover {
 }
 
 html { 
-    background: url(/Lixo/Images/BG.png) no-repeat center center fixed; 
+    background: url(/dogPoop/Images/Background.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -64,6 +64,7 @@ html {
     
     button[type="button"]:hover {
         background-color: #46a049;
-    }
-    
+    }    
+
 }
+
