--- a/spinningWheel/style.css
+++ b/spinningWheel/style.css
@@ -1,7 +1,52 @@
 #arrow {
     display: none;
     position: relative;
-    left: calc(47%);
+    left: calc(37.1%);
     text-align: center;
     width: 6%;
+    padding-top: 10%;
+}
+
+#Chart {
+    position: relative;
+    width: 80%;
+    left: 0%;
+}
+
+.SpinningWheelElements {
+
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+
+h1{
+    text-align:center;
+}
+
+@media only screen and (min-width: 950px) {
+    #Chart {
+        left: 30%;
+        position: absolute;
+        width: 60%;
+        top: 10%;
+    }
+
+    #arrow {
+        display: none;
+        position: absolute;
+        left: calc(57%);
+        padding-top: 0%;
+        top: 0%;
+    }
+
+    .SpinningWheelElements {
+        margin: auto;
+        width: 100%;    
+    }
+
+    h1{
+        text-align:left;
+    }
 }
