--- a/style.css
+++ b/style.css
@@ -89,17 +89,35 @@ nav a:hover {
     position: relative;
 }
 
-#slideshow img {
+#slideshow a{
+    object-fit: cover;
+    opacity: 1;
+}
+
+#slideshow img{
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
-    opacity: 0;
-    transition: 1s;
 }
 
-#slideshow img.active {
-    opacity: 1;
+#slideshow a.active {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 5s, opacity 0.5s linear;
+}
+
+.GameModes{
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.About{
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
