--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background:url(/HomePageImages/navbar_BG.png);
     color: white;
     padding: 20px;
     position: fixed;
@@ -22,6 +23,7 @@ nav {
 nav.visible {
     top: 0;
 }
+
 
 input[type="text"] {
     width: 300px;
@@ -66,21 +68,31 @@ nav a:hover {
 }
 
 .section {
-    /* 
+
     display: flex;
     align-items: center;
-    justify-content: center; */
-
-    opacity: 0;
-    transform: translateY(50px);
-    transition: all 2s ease;
+    justify-content: center;
     height: 100vh;
 
 }
 
-.section.visible {
-    opacity: 1;
-    transform: translateY(0);
+.text-container {
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 1.2rem;
+}
+
+
+#gameModes {
+    background: url(/images/Background_Gamemodes.png);
+
+}
+
+#about {
+    background-color: red;
+    background: url(/images/Background_About.png);
+
 }
 
 #slideshow {
@@ -89,12 +101,12 @@ nav a:hover {
     position: relative;
 }
 
-#slideshow a{
+#slideshow a {
     object-fit: cover;
     opacity: 1;
 }
 
-#slideshow img{
+#slideshow img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -108,16 +120,30 @@ nav a:hover {
     transition: visibility 5s, opacity 0.5s linear;
 }
 
-.GameModes{
+.GameModes {
     background-color: black;
     width: 100%;
     height: 100%;
     position: absolute;
 }
 
-.About{
+.About {
     background-color: red;
     width: 100%;
     height: 100%;
     position: absolute;
+}
+
+.gamemodeButton {
+    text-align: center;
+    width: 50%;
+    padding-left: 15%;
+}
+
+
+@media only screen and (min-width: 750px) {
+    .gamemodeButton {
+        width: 25%;
+    }
+
 }
