--- a/dogPoop/style.css
+++ b/dogPoop/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: white;
 
 }
@@ -40,7 +40,7 @@ button[type="button"]:hover {
 }
 
 html { 
-    background: url(/dogPoop/Images/Background.png) no-repeat center center fixed; 
+    background: url(../dogPoop/Images/Background.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
