--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav a:hover {
 
 #slideshow a {
     object-fit: cover;
-    opacity: 1;
+    display: none;
 }
 
 #slideshow img {
@@ -112,11 +112,12 @@ nav a:hover {
     position: absolute;
     top: 0;
     left: 0;
+    visibility: visible;
 }
 
 #slideshow a.active {
     visibility: hidden;
-    opacity: 0;
+    display: block;
     transition: visibility 5s, opacity 0.5s linear;
 }
 
